--- a/css/style.css
+++ b/css/style.css
@@ -12071,6 +12071,41 @@ footer i {
   padding-left: 20px;
 }
 
+.loading {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #EBEBEB;
+  border-color: solid #414141 solid #EBEBEB;
+  -webkit-animation: loading 1.2s linear infinite;
+          animation: loading 1.2s linear infinite;
+}
+
+@-webkit-keyframes loading {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes loading {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
 .nav-item a {
   text-decoration: none;
   color: #414141;
@@ -12093,20 +12128,20 @@ footer i {
 .message {
   width: 100%;
   padding: 1rem;
-  border: 1px solid grey;
-  color: grey;
+  border: 1px solid #EBEBEB;
+  color: #EBEBEB;
 }
 
 .message.error {
-  border-color: red;
-  color: white;
-  background: red;
+  border-color: #f51616;
+  color: black;
+  background: rgba(245, 22, 22, 0.4);
 }
 
 .message.success {
-  border-color: green;
-  color: white;
-  background: green;
+  border-color: #09e61c;
+  color: black;
+  background: rgba(10, 156, 22, 0.4);
 }
 
 .form-control {
@@ -12115,17 +12150,7 @@ footer i {
 
 .search__input {
   height: 30px;
-  border-radius: 5px 0 0 5px;
   border: 1px solid #6C7676;
-}
-
-.search__btn {
-  height: 30px;
-  margin-top: 0 !important;
-  background-color: #6C7676;
-  border: #6C7676;
-  border-radius: 0 5px 5px 0;
-  color: white;
 }
 
 .newsletter__input {
@@ -12144,6 +12169,10 @@ footer i {
 
 .upload__image {
   height: 28px;
+}
+
+.profile__icon {
+  padding-right: 5px;
 }
 
 .product__details {
