--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -28,7 +28,6 @@ body {
     background-color: $colour-transparent-light;
 }
 .btn-primary {
-    // color: $colour-dark-grey;
     width: 100%;
     background-color: $colour-green-grey;
     border: 1px solid $colour-green-grey;
@@ -75,5 +74,24 @@ footer {
         padding-left: 20px;
     }
     
+}
+.loading {
+    content: " ";
+    display: block;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border-radius: 50%;
+    border: 6px solid $colour-light-grey;
+    border-color: solid $colour-dark-grey solid $colour-light-grey;
+    animation: loading 1.2s linear infinite;
+}
+@keyframes loading {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
