--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -1,7 +1,9 @@
 h1, h2, h3, h4, h5 {
     font-family: $font-headings;
 }
-
+.h1 {
+    font-size: 1rem !important;
+}
 .navbar-brand {
     font-family: $font-headings;  
     font-weight: 600;
